# mgs-radio

./: .mypy.ini  .travis.yml  1066m12a.lbl  1066o10a.lbl  1066o10a.sri  MGS2d.m  MGSeds.m  PlotMGSoccult.py  README.md  README.rst  pyproject.toml  readmgs.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
data/: 1066m12a.sri  1066m12a.srt  1066o10a.srt
matlab/: MGSeds.m
mgsradio/: __init__.py  base.py  plots.py  read.py
mgsutils/: __init__.py  plots.py  readmgs.py
test/: test.py
tests/: test.py  test_mod.py
