[metadata]
name = mgsradio
version = 1.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/mgs-radio
description = Mars Global Surveyor radio occultation experiment read and plot
keywords =
  Mars global surveyor
  radio occultation
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  pandas
  xarray

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
